--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -113,6 +113,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/pass1"
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -143,6 +144,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/pass2"
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
